# thirty-minute-brain

./: LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN-Thirty-Minute-Brain.md  PHASE3-INTEGRATIONS.md  PHASE4-5-PRODUCTIZATION.md  PRD-Thirty-Minute-Brain.md
integrations/browser-extension/: README.md  background.js  manifest.json
integrations/shell-hooks/: README.md  bash.sh  powershell.ps1  zsh.zsh
integrations/vscode-extension/: README.md  package.json  tsconfig.json
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: cleanup.rs  commands.rs  context_pack.rs  db.rs  events.rs  main.rs  models.rs  sensitive.rs  watcher.rs
src/components/: AddContextModal.tsx  ContextPackModal.tsx  EmptyState.tsx  EventCard.test.tsx  EventCard.tsx  HighlightedText.tsx  PrivacyNoticeModal.tsx  SearchBar.tsx  SettingsView.tsx
src/lib/: activitySummary.test.ts  activitySummary.ts  api.ts  capturePolicy.test.ts  capturePolicy.ts  contextPack.test.ts  contextPack.ts  contextPackTemplates.test.ts  deepLink.test.ts  deepLink.ts  deepLinkIngestion.test.ts  deepLinkIngestion.ts  externalIngestionApi.test.ts  externalIngestionApi.ts  highlight.test.ts  highlight.ts  ingestion.test.ts  ingestion.ts  ingestionGateway.test.ts  ingestionGateway.ts  localStore.test.ts  localStore.ts  loopbackIngestion.test.ts  loopbackIngestion.ts  permissions.test.ts  permissions.ts  search.test.ts  (+13 more)
(+5 files in other folders)
